<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_pass"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txt_pass"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/user"
        android:selectAllOnFocus="true" >
    </EditText>
    
    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />
    
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_pass"
        android:layout_alignRight="@+id/txt_pass"
        android:layout_below="@+id/txt_pass"
        android:layout_marginTop="18dp"
        android:onClick="save"
        android:text="@string/save" />

    <TextView
        android:id="@+id/dateAndTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_btn"
        android:layout_alignRight="@+id/date_btn"
        android:layout_below="@+id/save_btn"
        android:layout_marginTop="26dp"
        android:gravity="center" />

    <Button
        android:id="@+id/date_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/save_btn"
        android:layout_alignRight="@+id/save_btn"
        android:layout_below="@+id/dateAndTime"
        android:text="@string/set_date" />

    <Button
        android:id="@+id/time_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_btn"
        android:layout_alignRight="@+id/date_btn"
        android:layout_below="@+id/date_btn"
        android:text="@string/set_time" />

    <EditText
        android:id="@+id/txt_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_btn"
        android:layout_alignRight="@+id/time_btn"
        android:layout_below="@+id/time_btn"
        android:layout_marginTop="16dp"
        android:ems="10"
		android:inputType="phone"
        android:hint="@string/mobile" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/date_btn"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/date_btn"
        android:src="@android:drawable/ic_menu_today" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/save_btn"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/save_btn"
        android:src="@android:drawable/ic_menu_save" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_tel"
        android:layout_marginBottom="3dp"
        android:layout_toLeftOf="@+id/txt_tel"
        android:src="@android:drawable/ic_menu_call" />

    <Button
        android:id="@+id/wake_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_tel"
        android:layout_below="@+id/txt_tel"
        android:layout_marginTop="20dp"
        android:onClick="wake"
        android:text="@string/wake_up" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time_btn"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/time_btn"
        android:src="@android:drawable/ic_menu_recent_history" />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wake_btn"
        android:layout_alignBottom="@+id/wake_btn"
        android:layout_alignLeft="@+id/txt_tel"
        android:onClick="call"
        android:text="@string/call_me" />
  
</RelativeLayout>
</ScrollView>